change spring-boot version to 1.3.4
Gradle
add support to gradle receipt

--- a/README
+++ b/README
@@ -22,3 +22,6 @@ gradle clean check
 
 # combines the assemble and check tasks
 gradle clean build
+
+# generate gradle.com report (receipt)
+gradle build -Dreceipt
